add_executable(test_logger
  logger.cpp
)
target_link_libraries(test_logger
  halmd_io
  ${HALMD_COMMON_LIBRARIES}
  ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
)
add_test(io_logger
  test_logger
)

add_executable(test_profiling_writers
  profiling_writers.cpp
)
target_link_libraries(test_profiling_writers
  halmd_io_profiling_writers
  halmd_io_profiling
  halmd_utility
  halmd_io
  ${HALMD_COMMON_LIBRARIES}
  ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
)
add_test(io_profiling_writers
  test_profiling_writers
)
