add_executable(test_thermodynamics
  thermodynamics.cpp
)
target_link_libraries(test_thermodynamics
  halmd_mdsim_host_forces
  halmd_mdsim_host_integrators
  halmd_mdsim_host_position
  halmd_mdsim_host_sort
  halmd_mdsim_host_velocities
  halmd_mdsim_host
  halmd_observables_host
  halmd_random_host
)
if(WITH_CUDA)
  target_link_libraries(test_thermodynamics
    halmd_mdsim_gpu_forces
    halmd_mdsim_gpu_integrators
    halmd_mdsim_gpu_position
    halmd_mdsim_gpu_sort
    halmd_mdsim_gpu_velocities
    halmd_mdsim_gpu
    halmd_observables_gpu
    halmd_random_gpu
    halmd_utility_gpu
  )
endif(WITH_CUDA)
target_link_libraries(test_thermodynamics
  halmd_io
  halmd_mdsim
  halmd_observables
  halmd_random
  halmd_utility
  ${HALMD_COMMON_LIBRARIES}
  ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
)
add_test(thermodynamics_host_2d
  test_thermodynamics --run_test=host/2d/* --log_level=test_suite
)
add_test(thermodynamics_host_3d
  test_thermodynamics --run_test=host/3d/* --log_level=test_suite
)
if(WITH_CUDA)
  add_test(thermodynamics_gpu_2d
    test_thermodynamics --run_test=gpu/2d/* --log_level=test_suite
  )
  add_test(thermodynamics_gpu_3d
    test_thermodynamics --run_test=gpu/3d/* --log_level=test_suite
  )
endif(WITH_CUDA)
