halmd_add_library(halmd_mdsim_host
  binning.cpp
  force.cpp
  maximum_squared_displacement.cpp
  neighbour.cpp
  particle.cpp
  velocity.cpp
)
halmd_add_modules(
  libhalmd_mdsim_host_binning
  libhalmd_mdsim_host_force
  libhalmd_mdsim_host_maximum_squared_displacement
  libhalmd_mdsim_host_neighbour
  libhalmd_mdsim_host_particle
  libhalmd_mdsim_host_velocity
)

add_subdirectory(forces)
add_subdirectory(integrators)
add_subdirectory(mobilities)
add_subdirectory(positions)
add_subdirectory(potentials)
add_subdirectory(sorts)
add_subdirectory(velocities)
