halmd_add_module(halmd_utility_lua_any_converter
  any_converter.cpp
)
halmd_add_module(halmd_utility_lua_hdf5
  hdf5.cpp
)
halmd_add_module(halmd_utility_lua_program_options
  program_options.cpp
)
target_link_libraries(halmd_utility_lua_program_options
  halmd_utility_program_options
)
halmd_add_module(halmd_utility_lua_signal
  signal.cpp
)
halmd_add_module(halmd_utility_lua_ublas
  ublas.cpp
)
