add_library(halmd_utility_lua_any_converter
  any_converter.cpp
)
add_library(halmd_utility_lua_hdf5
  hdf5.cpp
)
add_library(halmd_utility_lua_program_options
  program_options.cpp
)
target_link_libraries(halmd_utility_lua_program_options
  halmd_utility_program_options
)
add_library(halmd_utility_lua_signal
  signal.cpp
)
add_library(halmd_utility_lua_ublas
  ublas.cpp
)
